tests/match-10/out.txt
error: unreachable pattern
  ┌─ inp.sml:7:5
  │
7 │   | [7, 7] => 5
  │     ^^^^^^

typechecking failed
